--- a/data/filetypes.css
+++ b/data/filetypes.css
@@ -45,7 +45,9 @@ extension=css
 # the following characters are these which a "word" can contains, see documentation
 #wordchars=_-abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789
 
-# if only single comment char is supported like # in this file, leave comment_close blank
+# single comments, like # in this file
+#comment_single=
+# multiline comments
 comment_open=/*
 comment_close=*/
 
