--- a/geany.glade
+++ b/geany.glade
@@ -10205,7 +10205,7 @@ Match braces</property>
 			      <child>
 				<widget class="GtkLabel" id="label140">
 				  <property name="visible">True</property>
-				  <property name="label" translatable="yes">&lt;i&gt;Please refer to the manual for more details about these preferences.&lt;/i&gt;</property>
+				  <property name="label" translatable="yes">&lt;i&gt;Warning: read the manual before changing these preferences.&lt;/i&gt;</property>
 				  <property name="use_underline">False</property>
 				  <property name="use_markup">True</property>
 				  <property name="justify">GTK_JUSTIFY_LEFT</property>
